# fin-stress-reviews

./: FinTech App Reviews as a Proxy for Investor Stress.docx  README.md  bert_analysis.ipynb  binance_reviews_last5y_filtered_no_ui.csv  data_collection.ipynb  data_filtering.ipynb  finbert_finetune.ipynb  main.py  merged_finance_whitelist.csv  pyproject.toml
code/: data_collection.ipynb  data_filtering.ipynb  make_preds.ipynb  pred_analysis.ipynb
finetuned-finbert/: config.json
