[project]
name = "fin-stress-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-play-scraper>=1.2.7",
    "ipykernel>=6.30.1",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
