[project]
name = "fin-stress-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "google-play-scraper>=1.2.7",
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.1",
]
